# forensic-deepdive

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/forensic-deepdive-extract/: SKILL.md
.claude/skills/forensic-deepdive-query/: SKILL.md
.claude/skills/forensic-deepdive-update/: SKILL.md
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  README.md  RESEARCH.md  ROADMAP.md  install.md
docs/findings/: README.md
docs/findings/v0.1/: README.md  omi-test.md
docs/findings/v0.3/: README.md  fastapi-test.md  gitnexus-test.md  omi-test.md  ripgrep-test.md  spring-petclinic-test.md  superset-test.md
docs/findings/v0.4/: README.md  fastapi-test.md  gitnexus-test.md  hermes-agent-test.md  openapi-shop-test.md  spring-react-demo-test.md  superset-test.md
docs/findings/v0.5/: DEFERRED.md  README.md  hermes-agent-test.md  spring-petclinic-test.md  steps5-6-test.md  superset-test.md
docs/findings/v0.6/: DEFERRED.md  README.md  amqp-topic-test.md  django-routes-test.md  grpc-keying-test.md  jaxrs-subresource-test.md  memory-recall-test.md  profiling-test.md  superset-orm-test.md
docs/findings/v0.7/: DEFERRED.md  amqp-literal-acceptance-test.md  cli-style-foundation-test.md  django-completion-test.md  jaxrs-completion-test.md  manual-test-cli-gaps.md  mcp-tool-review.md  memory-followons-test.md  perf-test.md  styled-rendering-test.md
docs/findings/v0.8/: DEFERRED.md  README.md  cli-usability-review.md  grpc-examples-test.md  hermes-agent-test.md  omi-test.md  precision-revalidation.md  protocol-breadth-test.md  superset-test.md
docs/findings/v0.9/: DEFERRED.md  README.md  hermes-agent-test.md  superset-test.md
docs/v0.2/: KICKOFF_v0.2.md  PRD_v0.2.md  README.md  REMAINING.md  research_v0.2.md
docs/v0.3/: KICKOFF_v0.3.md  PRD_v0.3.md  research_v0.3.md
docs/v0.4/: KICKOFF_v0.4.md  PRD_v0.4.md  research_v0.4.md
docs/v0.5/: KICKOFF_v0.5.md  PRD_v0.5.md  research_v0.5.md
docs/v0.6/: KICKOFF_v0.6.md  PRD_v0.6.md  research_v0.6.md
docs/v0.7/: KICKOFF_v0.7.md  MANUAL_TEST.md  PRD_v0.7.md  research_v0.7.md
docs/v0.8/: KICKOFF_v0.8.md  PRD_v0.8.md  research_v0.8.md
docs/v0.9/: KICKOFF.md  MANUAL_TEST.md  PRD.md  research.md
examples/fastapi/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/gitnexus/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/grpc-route-guide/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/hermes-agent/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/jersey-helloworld/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/nestjs-cats-app/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/omi/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/rabbitmq-tutorials/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/ripgrep/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/spring-petclinic/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
examples/superset/: AGENT_BRIEF.md  ARCHAEOLOGY.md  HOTPATHS.md  MAP.md  MENTAL_MODEL.md
experiments/fastcontext/: README.md  RESULTS.md  arm_a.json  localization_eval.py  seeded_runner.py
scripts/: gate_metrics.py
src/forensic_deepdive/: __init__.py  cache.py  cli.py  inventory.py  pipeline.py  registry.py
src/forensic_deepdive/cli/: __init__.py  app.py  mcp_snippet.py
src/forensic_deepdive/contracts/: __init__.py  base.py  registry.py
src/forensic_deepdive/emit/: __init__.py  agent_brief_md.py  archaeology_md.py  architecture_md.py  common.py  hotpaths_md.py  map_md.py  mental_model_md.py  mermaid.py  shims.py  vault.py
src/forensic_deepdive/flatten/: __init__.py  repomix_backend.py
src/forensic_deepdive/graph/: __init__.py  ladybug_store.py  schema.py  store.py
src/forensic_deepdive/history/: __init__.py  git_archaeology.py
src/forensic_deepdive/insights/: __init__.py  decay.py  factory.py  graphiti_store.py  jsonl_store.py  recall_index.py  semantic_recall.py  shadow_ref.py  store.py  threshold.py
src/forensic_deepdive/llm/: __init__.py
src/forensic_deepdive/mcp_server/: __init__.py  server.py
src/forensic_deepdive/pipeline/: __init__.py  extract.py  phases.py  runner.py
src/forensic_deepdive/query/: __init__.py  artifacts.py  fuse.py  lexical.py  nl.py  semantic.py
src/forensic_deepdive/seed/: __init__.py  fastcontext_seed.py
tests/: test_amqp_topic.py  test_architecture.py  test_cache.py  test_cli.py  test_cli_style.py  test_contracts_base.py  test_cross_stack_polyglot.py  test_di_orm_e2e.py  test_dispatch_consumers.py  test_dispatch_e2e.py  test_dispatch_providers.py  test_django_routes.py  test_emit.py  test_emit_graph_mode.py  test_flagship_gap_e2e.py  test_framework_breadth.py  test_git_archaeology.py  test_golden_emit.py  test_graph.py  test_grpc.py  test_http_consumers_angular.py  test_http_consumers_configured_client.py  test_http_consumers_fetch_axios.py  test_http_consumers_java_clients.py  test_http_consumers_jquery.py  test_http_consumers_py_requests.py  test_http_consumers_react_query.py  test_http_consumers_rtk_query.py  test_http_normalize.py  test_http_providers_express.py  test_http_providers_fastapi.py  test_http_providers_flask.py  test_http_providers_flask_appbuilder.py  test_http_providers_spring.py  test_ids.py  test_imports.py  test_injection.py  test_insight_memory_v07.py  test_insight_recall.py  test_interactive.py  (+34 more)
tests/graph/: test_batch_perf.py  test_calls_via.py  test_endpoint_edges.py  test_ladybug_store.py  test_ladybug_store_batch.py  test_schema.py
tests/insights/: test_factory.py  test_jsonl_store.py  test_store.py  test_threshold.py
tests/mcp_server/: test_tools.py
tests/pipeline/: test_build_graph_phase.py  test_runner.py
tests/serve/: test_graph_api.py  test_http_server.py
(+195 files in other folders)
