[project]
name = "forensic-deepdive"
version = "0.1.0"
description = "Forensic deep-dive of any codebase. Produces 5 durable markdown artifacts (MAP, HOTPATHS, ARCHAEOLOGY, MENTAL_MODEL, AGENT_BRIEF) for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Dhevenddra" }]
keywords = [
    "claude-code", "cursor", "continue", "aider", "codex",
    "codebase-analysis", "tree-sitter", "agent-skills", "onboarding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tree-sitter-language-pack>=1.8.0",
    "networkx>=3.3",
    "typer>=0.12",
    "rich>=13.7",
    "pygithub>=2.3",
    "httpx>=0.27",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "real-ladybug>=0.15.3",
    "mcp>=1.27.1",
]

[project.optional-dependencies]
graphiti = ["graphiti-core>=0.28"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "ty"]
all = ["forensic-deepdive[graphiti,mcp,dev]"]

[project.scripts]
forensic = "forensic_deepdive.cli:app"

[project.urls]
Homepage = "https://github.com/dhevenddra/forensic-deepdive"
Issues = "https://github.com/dhevenddra/forensic-deepdive/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forensic_deepdive"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Test fixtures are sample code, not project code — don't lint or autofix them.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-x --tb=short"
# tests/fixtures/ contains synthetic sample code (including files named like
# test_*.py inside fixture repos). Don't recurse into fixture dirs.
norecursedirs = ["fixtures", "expected_emit"]
